=== Version 1.0
* Method missing support has been deprecated.
  Methods like node.likes and node.suggestions will raise an exception,
  use node.connections(:likes) or node.connections(:suggestions).

=== Version 0.5.24
* Rewrite subscription action to create subscription edges. Use user_node.subscribe( other_node, :all_stories )
  * Valid subscription types are :all_stories and :featured_stories
* Added node.subscription method to fetch subscriptions for a specific node
* Fetching containers for a certain node now supports :show => :all_stories or :show => :featured_stories, defaulting to :featured_stories

=== Version 0.5.21
* Allow to specify the direction in which you want the connection.( node.connection(:likes, direction: :outgoing)
* Specify direction in which you want the neighbours.( node.neighbours(:likes, :incoming)
* Add node.subscribe method.( node.subscribe(movie_node, :everything) )

=== Version 0.5.19
* Adds support for pagerank traversal urls (SheldonClient::Traverse.pagerank)
* Adds support for node containers (SheldonClient.node(2369).containers)

=== Version 0.5.6
* Adds support for user stream. (SheldonClient.stream('23235')

=== Version 0.5
* integrate elasticsearch

=== Version 0.4

* enhancements
  * Get the neighbours directly from the node with node.neighbours
  * node.connections(:likes), Fetches all the connections of type like.
  * SheldonClient.connection, single method to fetch connections, see documentation.
  * A single method for deletion

             node = SheldonClient.search( username: 'gonzo gonzales' ).first
             SheldonClient.delete(node: node )
             SheldonClient.delete(connection: node.connections(:likes).first )
             SheldonClient.delete(connection: {from: node, type:likes})

  * Fetch statistics around data stored inside sheldon with:

             SheldonClient.statistics

  * Fetch current defined sheldon schema, includes all available nodes and connections.

             SheldonClient.schema
