@@ -20,7 +20,7 @@ class SheldonClient
     def process!
       unless @connections.empty?
         response = send_request( :put, batch_connections_url, @connections )
-        response.code == '200' ? true : false
+        true
       end
     end
   end
