@@ -7,7 +7,7 @@ class SheldonClient
 
     def self.fetch_sheldon_node( node_id )
       response = send_request( :get, node_url(node_id) )
-      response.code == '200' ? Node.new( JSON.parse(response.body) ) : false
+      Node.new( JSON.parse(response.body) )
     end
 
     def self.fetch_sheldon_connection( object )
@@ -24,17 +24,17 @@ class SheldonClient
       end
 
       response = send_request( :get, url)
-      response.code == '200' ? Connection.new( JSON.parse(response.body) ) : false
+      Connection.new( JSON.parse(response.body) )
     end
 
     def self.fetch_edges( node_id, type, opts = {} )
       response = send_request( :get, node_connections_url(node_id, type, opts) )
-      response.code == '200' ? connection_collection( JSON.parse(response.body) ) : false
+      connection_collection( JSON.parse(response.body) )
     end
 
     def self.fetch_neighbours( from_id, type, direction = nil )
       response = send_request( :get, neighbours_url(from_id, type, direction) )
-      response.code == '200' ? node_collection( JSON.parse(response.body) ) : false
+      node_collection( JSON.parse(response.body) )
     end
 
     def self.fetch_node_type_ids( type )
@@ -44,27 +44,26 @@ class SheldonClient
       else
         response = send_request(:get, node_type_ids_url(type))
       end
-      response.code == '200' ? JSON.parse(response.body).compact : false
+      JSON.parse(response.body).compact
     end
 
     def self.fetch_collection( uri )
       response = send_request( :get, Addressable::URI.parse( SheldonClient.host + uri ) )
-      response.code == '200' ? node_collection( JSON.parse(response.body) ) : []
+      node_collection( JSON.parse(response.body) )
     end
 
     def self.get_stream( node, options = {} )
       response = send_request( :get, stream_url(node, options))
-      response.code == '200' ? node_collection( JSON.parse(response.body) ) : []
+      node_collection( JSON.parse(response.body) )
     end
 
     def self.traverse( type, start_node_id, options = {} )
       response = send_request :get, traversal_url(type, start_node_id, nil, options)
-      response.code == '200' ? JSON.parse(response.body) : {}
+      JSON.parse(response.body)
     end
 
     def self.pagerank( type, start_node_id, extra, options )
       response = send_request :get, traversal_url(type, start_node_id, extra, options)
-      return [] unless response.code == '200'
       JSON.parse(response.body).map do |o|
         { :rank => o["rank"],
           :node => Node.new(o["node"])
@@ -74,17 +73,17 @@ class SheldonClient
 
     def self.get_node_containers(node, opts = {})
       response = send_request :get, node_containers_url(node, opts)
-      response.code == '200' ? node_collection( JSON.parse(response.body) ) : []
+      node_collection( JSON.parse(response.body) )
     end
 
     def self.get_node_suggestions(node, opts = {})
       response = send_request :get, node_suggestions_url(node, opts)
-      response.code == '200' ? node_collection( JSON.parse(response.body) ) : []
+      node_collection( JSON.parse(response.body) )
     end
 
     def self.questionnaire(id)
       response = send_request :get, questionnaire_url(id)
-      response.code == '200' ? Questionnaire.new(JSON.parse(response.body)) : false
+      Questionnaire.new( JSON.parse(response.body) )
     end
 
     private
