@@ -2,6 +2,7 @@
 * Method missing support has been deprecated.
   Methods like node.likes and node.suggestions will raise an exception,
   use node.connections(:likes) or node.connections(:suggestions).
+* Exceptions are rise for response codes different to 2.X
 
 === Version 0.5.24
 * Rewrite subscription action to create subscription edges. Use user_node.subscribe( other_node, :all_stories )
